data/all_generated_tests/raw_wast_tests/br_InvalidorInconsistentControlFlowGraph_848.wast
;; 9. **Target Labels Not Being Defined:**    - **Test Description:** Implement `br` instructions that reference undefined labels, ensuring enforcement of label definition constraints. The objective is to provoke implementation-specific reactions to undefined labels.    - **Constraint Tested:** Label definition constraint enforcement.    - **CFG Relevance:** Undefined labels result in CFG inconsistencies, leading to execution attempts with no valid targets.

(assert_invalid
  (module (func $undefined-label
    (block (br 2))
  ))
  "unknown label"
)